@@ -18,7 +18,7 @@ var app = new Vue({
         return { dialogs: { uisettings: false, playersettings: false, info: false, sync: false, group: false, volume: false,
                             manage: false, rndmix: false, favorite: false, rating: false, sleep: false, movequeue: false,
                             podcast: false, podcastsearch: false, iteminfo: false, iframe: false, dstm: false, savequeue: false,
-                            icon: false, prompt:false, addtoplaylist: false, file: false } }
+                            icon: false, prompt:false, addtoplaylist: false, file: false, groupvolume: false } }
     },
     created() {
         this.autoLayout = true;
